Fix for bug#17891 Partitions: NDB, crash on select .. where col is null or col = value